Fix gap style in roof intelligence result page

--- a/components/pages/slides/styles.module.scss
+++ b/components/pages/slides/styles.module.scss
@@ -462,7 +462,6 @@
 .roof {
   color: #fff;
   background: rgb(221, 221, 221);
-  height: 900px;
 
   model-viewer {
     width: 400px;
